# TypeErasure

./: AnyNMEAMessage.h  CMakeLists.txt  ImmutableBuffer.cpp  ImmutableBuffer.h  MutableBuffer.cpp  MutableBuffer.h  NMEACommon.cpp  NMEACommon.h  NMEAExtractionStream.cpp  NMEAExtractionStream.h  NMEAInsertionStream.cpp  NMEAInsertionStream.h  README.md  Register32Bits.h  main.cpp  traits.h
